package fr.ul.acl.escape.engine;

public interface GameInterface {
    /**
     * Renders the game.
     */
    void render();
}
